fix: script tagging

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -8,7 +8,7 @@ export { Layout as default } from '@/components/Layout'
 
 ## Free Cloud Database {{ date: '2025-11-10T00:00Z' }}
 
-I focused on making EventDBX available and accessible in the cloud. Users can now run dbx cloud init to register for a free account. This account includes a free 30 MB remote instance on the cloud, created using:
+I focused on making EventDBX available and accessible in the cloud. Users can now run `dbx cloud init` to register for a free account. This account includes a free 30 MB remote instance on the cloud, created using:
 `dbx cloud create <domain> --region=us-west1`
 
 If additional resources (storage, CPU, or RAM) are needed, users can easily upgrade their instance:
