docs: our philosophy

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -78,7 +78,7 @@ A write-side database should encourage task-based thinking rather than CRUD-base
 - History is often an afterthought (logging, auditing, etc.).
 - Leads to fragile systems that do not explain their past.
 
-### Task-Based Thinking (EventDBX's Philosophy)
+### Task-Based Thinking (Our Philosophy)
 
 - Focused on intent and causality — every change is a task or event.
 - State is derived, not stored.
