docs: upcoming features

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -14,7 +14,7 @@ I focused on making EventDBX available and accessible in the cloud. Users can no
 If additional resources (Disk (GB), VCPU, or RAM) are needed, users can easily upgrade their instance:
 `dbx cloud upgrade <domain> --plan flow --disk 10`
 
-All user data is hosted securely on Google Cloud Platform (GCP).
+All user data is securely hosted on Google Cloud Platform (GCP). This feature is currently under development and will be available soon.
 
 ### <SparkleIcon /> Improvements
 
